--- a/package.json
+++ b/package.json
@@ -5,7 +5,20 @@
   "main": "index.js",
   "dependencies": {
     "@hashgraph/sdk": "^2.16.6",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "ethers": "^5.6.1",
+    "hardhat": "^2.9.1",
+    "hardhat-contract-sizer": "^2.5.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "ethereum-checksum-address": "0.0.8",
+    "ethereum-waffle": "^3.4.4",
+    "ethereumjs-wallet": "^1.0.2",
+    "readline-sync": "^1.4.10",
+    "solhint": "^3.3.7",
+    "solidity-coverage": "^0.7.20"
   },
   "author": "Samuel Castleman"
 }
